--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "start": "react-scripts start",
     "start:server-dev": "concurrently \"npm start\" \"cross-env FLASK_ENV=development FLASK_APP=../backend/app.py flask run\"",
     "start:server-prod": "rm -rf ../backend/templates && rm -rf ../backend/static && npm run build && cross-env FLASK_ENV=production FLASK_APP=../backend/app.py flask run",
-    "build": "react-scripts build && move build ../backend && move ../backend/build/static ../backend && move ../backend/build ../backend/templates",
+    "build": "react-scripts build && mv build ../backend && mv ../backend/build/static ../backend && mv ../backend/build ../backend/templates",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
